<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsSignupActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/first_name"
                tools:ignore="Autofill"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/last_name"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white"
                tools:ignore="Autofill" />

        </android.support.design.widget.TextInputLayout>

        <EditText
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="Autofill"
            android:inputType="number"
            android:hint="@string/age"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="Autofill"
            android:hint="@string/about"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@android:color/white" />

        <RadioGroup
            android:id="@+id/radioGrp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="8dp"
            android:paddingTop="64dp"
            android:paddingRight="8dp">

            <RadioButton
                android:id="@+id/radioM"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/male"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/radioF"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/female"
                android:textSize="14sp" />
        </RadioGroup>

        <Button
            android:id="@+id/registerbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/register" />

        <!-- Link to Login Screen -->

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />
</android.support.design.widget.CoordinatorLayout>