<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".reportActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:hint="@string/name"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/common_google_signin_btn_text_light_pressed"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/reportText"
            android:layout_width="match_parent"
            android:layout_height="391dp"
            android:hint="@string/report"
            android:scrollHorizontally="false"
            android:inputType="text"
            android:gravity="top|left"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/common_google_signin_btn_text_light_pressed"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/sendReport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/send_report"
            android:textColor="@color/bg_register" />


    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>